# COGclassifier

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  COGclassifier.py  README.md  pyproject.toml
.github/workflows/: ci.yml  publish_to_pypi.yml
example/: cogclassifier_example_api.py  cogclassifier_example_run.sh
example/input/: ecoli.faa  mycoplasma.faa  synechocystis.faa
example/output/customize/: classifier_count_add_no_classify.tsv  classifier_count_change_color.tsv
example/output/ecoli/: cog_classify.tsv  cog_count_barchart.html  cog_count_piechart.html  rpsblast.tsv
example/output/ecoli_cog_classifier/: classifier_count.tsv  classifier_count_barchart.html  classifier_count_piechart.html  classifier_count_piechart_sort.html  classifier_result.tsv  classifier_stats.txt  rpsblast_result.tsv
example/output/mycoplasma/: cog_classify.tsv  cog_count.tsv  cog_count_barchart.html  cog_count_piechart.html  rpsblast.tsv
example/output/mycoplasma_cog_classifier/: classifier_count.tsv  classifier_count_barchart.html  classifier_count_piechart.html  classifier_count_piechart_sort.html  classifier_result.tsv  classifier_stats.txt  rpsblast_result.tsv
example/output/synechocystis/: cog_classify.tsv  cog_count.tsv  cog_count_barchart.html  cog_count_piechart.html  rpsblast.tsv
example/output/synechocystis_cog_classifier/: classifier_count.tsv  classifier_count_barchart.html  classifier_count_piechart.html  classifier_count_piechart_sort.html  classifier_result.tsv  classifier_stats.txt  rpsblast_result.tsv
example/plot/: cog_count.tsv  cog_count_add_no_classify.tsv  cog_count_change_color.tsv  plot_example.ipynb
src/cogclassifier/: COGclassifier.py  __init__.py  __main__.py  blast.py  cog.py  cogclassifier.py  const.py  logger.py  main.py  plot.py  utils.py
src/cogclassifier/resources/: cog_definition.tsv  cog_func_category.tsv
src/cogclassifier/script/: plot_cog_classifier_barchart.py  plot_cog_classifier_piechart.py
src/cogclassifier/scripts/: cogclassifier.py  plot_cog_count_barchart.py  plot_cog_count_piechart.py
tests/: conftest.py  test_cog.py  test_cogclassifier.py
tests/data/: example.faa
tests/script/: test_plot_cog_classifier_barchart.py  test_plot_cog_classifier_piechart.py
tests/scripts/: test_cogclassifier.py  test_plot_cog_count_barchart.py  test_plot_cog_count_piechart.py
